<resources>
    <string name="app_name">Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leaves</string>
    <string name="nav_header_subtitle">Fallen leaves flying</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">System</string>
    <string name="menu_widget">UI</string>

    <string name="home_second">Home Second</string>

    <!--动画-->
    <string name="animation_title_frame">逐帧动画</string>
    <string name="animation_title_tween">补间动画</string>
    <string name="animation_title_property">属性动画</string>

    <string name="animation_alpha">透明度</string>
    <string name="animation_scale">缩放</string>
    <string name="animation_rotate">旋转</string>
    <string name="animation_translate">平移</string>
    <string name="animation_set">组合</string>
    <string name="animation_set_custom">自定义</string>
    <string name="sensor_type">传感器类型</string>
    <string name="sensor_accelerometer">加速度传感器</string>
    <string name="sensor_gravity">重力传感器</string>
    <string name="sensor_light">光传感器</string>
    <string name="sensor_proximity">距离传感器</string>

    <string name="title_activity_test_widget">TestWidgetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
