<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SensorActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sensor_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/sensor_type"/>

            <TextView
                android:id="@+id/sensor_accelerometer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/sensor_accelerometer"/>

            <TextView
                android:id="@+id/sensor_gravity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/sensor_gravity"/>

            <TextView
                android:id="@+id/sensor_light_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/sensor_light"/>

            <TextView
                android:id="@+id/sensor_proximity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/sensor_proximity"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>