<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_anim_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/anim_frame_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_title_frame"/>
        <Button
            android:id="@+id/anim_tween_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_title_tween"/>
        <Button
            android:id="@+id/anim_property_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_title_property"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tween_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_anim_category"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/anim_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_alpha"/>
        <Button
            android:id="@+id/anim_scale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_scale"/>
        <Button
            android:id="@+id/anim_translate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_translate"/>
        <Button
            android:id="@+id/anim_rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_rotate"/>
        <Button
            android:id="@+id/anim_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_set"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_property_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_tween_anim"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/property_anim_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_alpha"/>
        <Button
            android:id="@+id/property_anim_scale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_scale"/>
        <Button
            android:id="@+id/property_anim_translate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_translate"/>
        <Button
            android:id="@+id/property_anim_rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_rotate"/>
        <Button
            android:id="@+id/property_anim_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animation_set"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/anim_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>